Deploy new changes

--- a/index.html
+++ b/index.html
@@ -265,7 +265,7 @@
       flex-wrap: wrap;
     }
 
-    #footer .visitor-info {
+    .visitor-info {
       flex: 1 1 300px;
       text-align: left;
       min-width: 200px;
@@ -311,12 +311,6 @@
         flex: unset;
         min-width: auto;
         margin: 0;
-      }
-
-    
-      #footer .visitor-info {
-        text-align: center !important;
-        margin: 0 !important;
       }
     
 
@@ -586,9 +580,15 @@
       <li>Designed to track traveler trends and packing preferences across regions</li>
       <li>Built to showcase cloud-native development and serverless best practices</li>
     </ul>
-    <p style="margin-top: 8px; font-style: italic;">
-      Planned stack: Python, AWS Lambda, Bedrock, API Gateway, S3, CloudWatch
-    </p>
+
+    <div class="tech-stack-footer">
+      <span class="tech-tag">Python</span>
+      <span class="tech-tag">Lambda</span>
+      <span class="tech-tag">Bedrock</span>
+      <span class="tech-tag">API Gateway</span>
+      <span class="tech-tag">S3</span>
+      <span class="tech-tag">CloudWatch</span>
+    </div>
   </div>
 
 
@@ -603,9 +603,17 @@
       <li>Integrates Amazon Bedrock with Google Maps to provide real-time directions and tailored recommendations</li>
       <li>Built with a fully serverless, cloud-native architecture</li>
     </ul>
-    <p style="margin-top: 8px; font-style: italic;">
-      Planned stack: Python, AWS Lambda, Bedrock, API Gateway, S3, CloudWatch, Google Maps API
-    </p>
+   
+    <div class="tech-stack-footer">
+      <span class="tech-tag">Python</span>
+      <span class="tech-tag">Lambda</span>
+      <span class="tech-tag">Bedrock</span>
+      <span class="tech-tag">API Gateway</span>
+      <span class="tech-tag">S3</span>
+      <span class="tech-tag">CloudWatch</span>
+      <span class="tech-tag">Google Maps API</span>
+    </div>
+
   </div>
 
     <div class="speech-bubble" style="text-align: left; padding-left: 24px; padding-right: 24px;">
@@ -623,7 +631,13 @@
     <p style="margin-top: 8px; font-style: italic;">
       Built with: AWS Lambda, Bedrock, API Gateway, S3, CloudWatch
     </p>
-  </div>
+    <div class="tech-stack-footer">
+      <span class="tech-tag">Lambda</span>
+      <span class="tech-tag">Bedrock</span>
+      <span class="tech-tag">API Gateway</span>
+      <span class="tech-tag">S3</span>
+      <span class="tech-tag">CloudWatch</span>
+    </div>
 </div>
 
 <div class="panel" id="education">
